--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,27 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
 }
 
 a {
   color: #00B7FF;
 }
 
+.tooltip {
+  background-color: #f1f1f1;
+  padding: 10px;
+}
+
+#issue-label {
+  width: 70%;
+  resize: none;
+  color: black;
+  margin-bottom: 15px;
+  background-color: #ededed;
+  padding: 5px;
+  border: 1px solid grey;
+}
 
 .modal {
   display: none;
@@ -19,6 +35,7 @@ a {
   overflow: auto;
   min-width: 30%;
   min-height: 60%;
+  box-shadow: 5px 5px 15px;
 }
 .modal-content h2 {
   width: 100%;
@@ -34,6 +51,7 @@ a {
 .modal-content .comment {
   min-width: 70%;
   min-height: 60px;
+  resize: vertical;
 }
 .modal-content label {
   width: 100%;
@@ -62,6 +80,9 @@ a {
 
 .modal .buttons {
   margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
 }
 
 .modal .buttons button {
@@ -70,6 +91,54 @@ a {
   text-align: center;
   vertical-align: text-top;
 }
+
+#total-time h3 {
+  margin: 10px 5px 0 0;
+  display: inline-block;
+}
+
+
+#total-time-value {
+  display: inline-block;
+}
+
+#total-time {
+  text-align: center;
+  flex-grow: 1;
+}
+
+footer {
+  display: flex;
+  height: 40px;
+}
+
+div#zoom-container {
+  line-height: 34px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+div#weekend-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 15px;
+}
+
+input#zoomRange {
+  height: 100%;
+  margin: 0 15px;
+}
+
+output#zoom-output {
+  line-height: 25px;
+}
+
+input#include-weekends {
+  margin: 5px 0 6px;
+}
+
+
 
 /********** Choices.js **********/
 .modal .choices {
