--- a/views/index.njk
+++ b/views/index.njk
@@ -14,6 +14,11 @@
         />
         <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
         <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js'></script>
+        <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
+        <script src="https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js"></script>        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js" ></script>
+        <script src="/javascripts/moment-duration-format.js"></script>
+        
         <script>
         var calendar;
         document.addEventListener('DOMContentLoaded', function() {
@@ -21,24 +26,53 @@
             calendar = new FullCalendar.Calendar(calendarElement, {
                 initialView: 'timeGridWeek',
                 nowIndicator: true,
-                now: new Date(),
                 customButtons: {
                     refreshBtn: {
                         text: '🔄',
+                        hint: 'Refresh work logs',
                         click: function() { calendar.refetchEvents(); }
                     }
                 },
-                height: 'calc(100vh - 50px)',
+                height: 'calc(100vh - 60px)',
                 eventColor: '#2a75fe',
                 allDaySlot: false,
+                weekends:false,
                 headerToolbar: {
                     left: 'prev,today,next',
                     center: 'title',
-                    right: 'refreshBtn,timeGridWeek,timeGridDay' // user can switch between the two
+                    right: 'refreshBtn,dayGridMonth,timeGridWeek,timeGridDay' // user can switch between the two
                 },
+                slotDuration:'00:15:00' ,
+                slotLabelInterval: '01:00:00',
                 selectable:true,
                 selectMirror:true,
-                events: '/events',
+                businessHours: {
+                    daysOfWeek: [ 1, 2, 3, 4, 5 ],
+
+                    startTime: '08:00', // a start time
+                    endTime: '17:00', // an end time 
+                },
+                scrollTime: '08:00',
+                events: {
+                    url: '/events',
+                    method: 'GET',
+                    failure: function() {
+                        alert('there was an error while fetching events!');
+                    },
+                    success: function(events) {
+                        updateTotalTime(events);
+                    }
+                },
+                datesSet: function(info) {
+                    var visibleEvents = calendar.getEvents().filter(event => {
+                        const s = info.start, e = info.end
+                        if (event.start > e || event.end < s) return false
+                        return true
+                    })
+                    updateTotalTime(visibleEvents);
+                    refreshIssuesDropdown();
+                    
+                },
                 eventResize: function(info) {
                     // use fetch to call /worklog with a PUT request, passing the new start time and calculated duration
                     fetch('/worklog/' + info.event.extendedProps.worklogId, {
@@ -79,18 +113,72 @@
                 eventClick: function(info) {
                     showUpdateModal(info.event);
                 },
+                eventDidMount: function(info) {
+                    var title = (info.event.extendedProps.issueKey || '') + ' ' + (info.event.extendedProps.issueSummary || '');
+                    var tooltip = new Tooltip(info.el, {
+                        title: title,
+                        placement: 'top',
+                        trigger: 'hover',
+                        contaier: 'body',
+                    });
+                },
                 unselectCancel: '.modal',
                 select: function(info) {
                     showCreateModal(info.start, info.end);
                 }
             });
             calendar.render();
+
+            var slider = document.getElementById("zoom-range");
+            slider.oninput = function() {
+                var timeVal = this.value;
+
+                if (timeVal < 10) {
+                    timeVal = '0' + timeVal;
+                }
+                /*switch(this.value) {
+                    case '1':
+                        calendar.setOption('slotDuration', '00:30:00');
+                    break;
+                    case '2':
+                        calendar.setOption('slotDuration', '00:20:00');
+                    break;
+                    case '3':
+                        calendar.setOption('slotDuration', '00:15:00');
+                    break;
+                }*/
+                calendar.setOption('slotDuration', '00:'+timeVal+':00');
+                document.getElementById("zoom-output").innerHTML = this.value + " minutes / slot";
+            }
+
+            var weekendInput = document.getElementById("include-weekends");
+            weekendInput.addEventListener("change", () => {
+                 calendar.setOption('weekends', weekendInput.checked);
+            });
         });
+
+        function updateTotalTime(events) {
+            var totalTime = 0;
+            
+            events.forEach((event) => {
+                var duration = new Date(event.end) - new Date(event.start);
+                totalTime = totalTime + duration;
+            });
+            
+            var timeElement = document.getElementById('total-time-value');
+            timeElement.innerHTML = moment.duration(totalTime).format("H [hour and] m [min]");
+        }
         </script>
     </head>
 
     <body>
         {{ worklogModal.modalForm('/worklog/') }}
         <div id='calendar'></div>
+        <footer>
+            <div id='total-time'><h3>Total time : </h2><div id='total-time-value'></div></div>
+            <div id='weekend-container'><input type="checkbox" id="include-weekends" name="include-weekends"><label for="include-weekends">Weekends</label></div>
+            <div id='zoom-container'><input type="range" min="5" max="60" step="5" value="15" id="zoom-range" name="zoom-range"><output for="zoom-range" id="zoom-output">15 minutes / slot</output></div>
+            
+        </footer>
     </body>
 </html>
