--- a/views/index.njk
+++ b/views/index.njk
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>  
-        <title>Jira Time</title>
+        <title>Plywood - Jira Worklog Management</title>
         <link href='/stylesheets/style.css' rel='stylesheet' />
         <meta http-equiv='Content-Security-Policy' content="font-src data:" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -12,6 +12,9 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css"
         />
+
+        <link type="image/png" sizes="96x96" rel="icon" href="/images/icons8-plywood-96.png">
+
         <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
         <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js'></script>
         <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
@@ -178,7 +181,7 @@
             <div id='total-time'><h3>Total time : </h2><div id='total-time-value'></div></div>
             <div id='weekend-container'><input type="checkbox" id="include-weekends" name="include-weekends"><label for="include-weekends">Weekends</label></div>
             <div id='zoom-container'><input type="range" min="5" max="60" step="5" value="15" id="zoom-range" name="zoom-range"><output for="zoom-range" id="zoom-output">15 minutes / slot</output></div>
-            
+            <div class="about-section"><div class="icons-8"><a target="_blank" href="https://icons8.com/icon/4ONNYCMz9R42/plywood">Plywood</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></div>Software licensed under the <a target="_blank" href="https://opensource.org/license/MIT/">MIT License</a></div>
         </footer>
     </body>
 </html>
