updated readme, moved dependencies to be local

--- a/views/index.njk
+++ b/views/index.njk
@@ -10,16 +10,16 @@
         <meta charset='utf-8' />
         <link
         rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css"
+        href="/stylesheets/choices.min.css"
         />
 
         <link type="image/png" sizes="96x96" rel="icon" href="/images/icons8-plywood-96.png">
 
-        <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-        <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js'></script>
-        <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
-        <script src="https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js"></script>        
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js" ></script>
+        <script src="/javascripts/choices.min.js"></script>
+        <script src='/javascripts/fullcalendar.min.js'></script>
+        <script src="/javascripts/popper.min.js"></script>
+        <script src="/javascripts/tooltip.min.js"></script>        
+        <script src="/javascripts/moment.min.js" ></script>
         <script src="/javascripts/moment-duration-format.js"></script>
         
         <script>
