--- a/views/worklogModal.njk
+++ b/views/worklogModal.njk
@@ -41,12 +41,12 @@
   </div>
   <!-- JavaScript to show the modal and handle form submission -->
   <script>
-    function handleResponse(response) {
-        if (response.status === 302 && response.headers.get('Location') === '/auth/login') {
-            window.location.href = response.headers.get('Location');
-        } else {
-            return response.json();
-        }
+    function handleError(error) {
+      if(error && error.message && error.message=="NetworkError when attempting to fetch resource.") {
+        return fetch('/auth/refreshToken').catch((error)=>{
+          window.location.href = "/auth/login";
+        });
+      }
     }
 
     var choicesCreate;  // choices.js instance
@@ -116,15 +116,15 @@
           'Content-Type': 'application/json'
         },
         body: JSON.stringify(reqBody)
-      }).then(handleResponse)
+      })
       .then(response => {
           // Handle the response
           resetControls();
           refreshEverything();
         })
         .catch(error => {
+          handleError(error);
           console.log(error); 
-          alert(error);
           // Handle errors
         });
     }
@@ -137,15 +137,15 @@
       if (confirm('Are you sure you want to delete this work log ?')) {
         return fetch('{{ endpoint }}' + formData.get("workLogId-update") + '?issueId=' + formData.get("issue-update"), {
         method: 'DELETE',
-      }).then(handleResponse)
+      })
       .then(response => {
           // Handle the response
           resetControls();
           refreshEverything();
         })
         .catch(error => {
+          handleError(error);
           console.log(error); 
-          alert(error);
           // Handle errors
         });
       } else {
@@ -178,15 +178,14 @@
         },
         body: JSON.stringify(reqBody)
       })
-      .then(handleResponse)
       .then(response => {
           // Handle the response
           resetControls();
           refreshEverything();
         })
         .catch(error => {
+          handleError(error);
           console.log(error); 
-          alert(error);
           // Handle errors
         });
     }
@@ -196,7 +195,6 @@
       var startDate = encodeURIComponent(new Date(calendar.view.activeStart).toISOString());
       var endDate = encodeURIComponent(new Date(calendar.view.activeEnd).toISOString());
       return fetch('/issues/user?start='+ startDate + '&end=' + endDate)
-        .then(handleResponse)
         .then(data => {
           var options = [];
           // Add options from the fetched data
@@ -212,22 +210,19 @@
         })
         .catch(error => {
           // Handle errors
-          console.log(error);
-          alert(error);
+          handleError(error);
         });
     }
 
     function fetchIssue(issueId) {
       return fetch(`/issues/${issueId}`)
-        .then(handleResponse)
         .catch(error => {
-          // Handle errors
+          handleError(error);
         });
     }
 
     function fetchWorkLog(workLogId, issueId) {
       fetch(`/worklog/${workLogId}?issueId=${issueId}`)
-        .then(handleResponse)
         .then(data => {
           // Set the form values
           const issueInput = document.getElementById('issue-update');
@@ -241,7 +236,7 @@
           commentInput.value = data.comment || '';
         })
         .catch(error => {
-          // Handle errors
+          handleError(error);
         });
     }
 
