modified error logging, updated about section

--- a/views/aboutModal.njk
+++ b/views/aboutModal.njk
@@ -8,8 +8,9 @@
                     <p><a target="_blank" href="https://icons8.com/icon/4ONNYCMz9R42/plywood">Plywood</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
                     <p><a target="_blank" href="https://icons8.com/icon/KnQ23R20ge4i/dots-loading">Dots Loading</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
                 </div>
-                <p>Software licensed under the <a target="_blank" href="https://opensource.org/license/MIT/">MIT License</a></p>
-                <p>Version: 0.2.1</p>
+                <p><a target="_blank" href="https://github.com/J2-Tech/Plywood-jira">https://github.com/J2-Tech/Plywood-jira</a></p>
+                <p>Software licensed under the <a target="_blank" href="https://github.com/J2-Tech/Plywood-jira/blob/main/LICENSE.md">MIT License</a></p>
+                <p>Version: 0.2.3</p>
             </div>
             <div class="buttons">
                 <button id="close-btn-about" title="Close" type="button">✖️</button>
