Fixed a bug with update / delete

--- a/views/modals.njk
+++ b/views/modals.njk
@@ -16,7 +16,7 @@
 
     function resetControls() {
       showLoading();
-      const updateWorkLogIdInput = document.querySelector('input[name="workLogId-update"]');
+      const updateWorkLogIdInput = document.querySelector('input[name="worklogid-update"]');
       updateWorkLogIdInput.value = '';
 
       const updateStartInput = document.querySelector('input[name="start-update"]');
